--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,13 +1,16 @@
 <div class="row">
-	<div class="small-10 small-centered columns">
+	<div class="small-12 columns">
 		<h1>Restaurants are Swell</h1>
+
 		<div class="panel">
+			<%= link_to 'Add Restaurant', new_restaurant_path, { :class => 'button'} %>
 			<% @restaurants.each do |restaurant| %>
-				<h2><%= restaurant.name %></h2>
+				<div class="restaurant-list">
+					<h4><%= link_to restaurant.name %></h4>
+					<p>Located in <%= restaurant.city %>, <%= restaurant.state %></p>
+					<%= link_to 'Edit', edit_restaurant_path(@restaurant), :class => "tiny button success" %>
+				</div>
 			<% end %>
-			<p>
-				Hoppa up t' idear dinnahbucket unthaw hoppa. Hahd tellin' not knowin' ankle biteah ayuh fellers Bah Hahbah. Powrtland wreckah puckahbrush gawmy flatlandas justa smidgin, smokie fellers bogan rhubaahb Bean's queeah. Tunk bookin' it bub ankle biteah some eleghant dinnahbucket nummah, wicked pissah The 'Gash Hold'er Newt she's, heddin for da ruhbarb! back woods Outta Staydahs Moody's Bean's down east. Nummah than a faht podunk Yessah gawmy lobstah ayuhpawt smokie. Can't get theyah from heeyah whawf 'Roostik nummah yessah-bub. Windah bendah ankle biteah Shit the bed. Feed 'uh the hot suppah., Have a good one. leaf peepahs puff wicked pissah gettin' ugly crunchah bogan dingy cah.
-			</p>
 		</div>
 	</div>
 </div>
