--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -15,7 +15,9 @@
 		</div>
 		<div class="small-12 large-6 columns">
 			<%= link_to 'Edit', edit_restaurant_path(@restaurant), :class => "tiny button success" %>
-			<button class="tiny alert">Destroy</button>
+			<%= link_to 'Destroy', restaurant_path(@restaurant),
+                    method: :delete, data: { confirm: 'Are you sure?' }, :class => "tiny button alert" %>
+            <%= link_to 'Back', restaurants_path, :class => "tiny button" %>
 		</div>
 	</div>
 </div>
