--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for :restaurant, url: restaurants_path do |f| %>
+<%= form_for :restaurant, url: restaurants_path, :html => { :multipart => true } do |f| %>
   <% if @restaurant.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@restaurant.errors.count, "error") %> prohibited
@@ -38,6 +38,9 @@
   <p>
     <%= f.label :phone %><br>
     <%= f.text_field :phone %>
+  </p>
+  <p>
+    <%= f.file_field :image %>
   </p>
 
 
