--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,5 +1,6 @@
 <div class="row">
 	<div class="small-12 columns">
+		<%= image_tag @restaurant.image_url %>
 		<h1><%= @restaurant.name %></h1>
 		<p><%= @restaurant.description %></p>
 		<div class="small-12 large-6 columns">
