--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -9,6 +9,11 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_self
- *= require foundation_and_overrides
  *= require_tree .
  */
+
+/* Import all variables*/
+@import "variables/palette.scss";
+
+/*Import Foundation & Overrides*/
+@import "foundation/foundation_and_overrides.scss";
